if(Boost_UNIT_TEST_FRAMEWORK_FOUND)
  message("Creating tests for Aquila")
  include_directories(${CMAKE_CURRENT_LIST_DIR})
  include(CTest)
  enable_testing()
  SUBDIRLIST(tests "${CMAKE_CURRENT_LIST_DIR}")
  foreach(test ${tests})
    file(GLOB_RECURSE test_srcs "tests/${test}/*.cpp")
	file(GLOB_RECURSE test_knl "tests/${test}/*.cu")
	LIST(LENGTH test_knl num_knl)
	list(LENGTH test_srcs num_srcs)
	IF(${num_knl} GREATER 0)
      cuda_add_executable(${test} ${test_srcs} ${test_knl})
	else()
	  if(${num_srcs} GREATER 0)
        add_executable(${test} ${test_srcs})
	  else()
	    break()
	  endif()
    endif()
    
    TARGET_LINK_LIBRARIES(${test} MetaObject Aquila ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
    ADD_DEPENDENCIES(${test} MetaObject Aquila)
    set_target_properties(${test} PROPERTIES FOLDER Tests/Aquila)
      
    add_test(${test} ${test})
    if(MSVC)
      CONFIGURE_FILE("tests/Test.vcxproj.user.in" ${CMAKE_BINARY_DIR}/Aquila/${test}.vcxproj.user @ONLY)
	endif()
  endforeach()
endif()